--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
             </div>
 
             <div class="contact_box">
-                <form action="https://formspree.io/f/mvgoqrvk">
+                <form action="https://formspree.io/f/mvgoqrvk" method="POST">
                     <h2 class="heading">Contactez <span>Moi</span></h2>
                     <div class="field_box">
                         <input type="text" placeholder="Nom" name="name" required>
