--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </h2>
             <p>Je suis jeune, entreprenant et dynamique. Je veux faire de ma passion mon métier.</p>
             <div class="btn_sci">
-                <a href="https://www.mediafire.com/file/27hobobcyfqi5j5/CV_Tanjona_2.0.pdf/file" target="_blank" class="btn">Télécharger CV</a>
+                <a href="https://www.mediafire.com/file/rq7qg5q3sffsevi/CV_Tanjona.pdf/file" target="_blank" class="btn">Télécharger CV</a>
                 <div class="sci">
                     <a href="https://github.com/Tannrbt" target="_blank"><i class='bx bxl-github'></i></a>
                     <a href="https://www.linkedin.com/in/tanjona-nomenjanahary-rabe-razanamahery-73559123a/?originalSubdomain=mg" target="_blank"><i class='bx bxl-linkedin'></i></a>
