--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         </div>
                         <div class="profil_item">
                             <p class="year">2020</p>
-                            <h3>ATTESTATION À TOUS LES NIVEAUX DU DIPLOME D'ETUDE EN LANGUE FRANÇAISE</h3>
+                            <h3>ATTESTATION À TOUS LES NIVEAUX DU DELF</h3>
                             <p class="company">I.N.G Madagascar</p>
                         </div>
                         <div class="profil_item">
