--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h1>Tanjona Razanamahery</h1>
             <h2>Je suis 
                 <span style="--i:4;" data-text="Développeur Web">Développeur Web</span>
-                <span style="--i:3;" data-text="UI/UX Designer">UI/UX Designer</span>
+                <span style="--i:3;" data-text="Designer UI/UX">Designer UI/UX</span>
                 <span style="--i:2;" data-text="Graphiste">Graphiste</span>
             </h2>
             <p>Je suis jeune, entreprenant et dynamique. Je veux faire de ma passion mon métier.</p>
