--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="accueil_img">
             <div class="img_box">
                 <div class="img_item">
-                    <img src="img/home.png" alt="home">
+                    <img src="img/Tanjona_Razanamahery.png" alt="home">
                 </div>
             </div>
         </div>
