--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
             </h2>
             <p>Je suis jeune, entreprenant et dynamique. Je veux faire de ma passion mon métier.</p>
             <div class="btn_sci">
-                <a href="https://www.mediafire.com/file/d5rcovioz1nhn1n/CV_Tanjona_RAZANAMAHERY.pdf/file" target="_blank" class="btn">Télécharger CV</a>
+                <a href="https://www.mediafire.com/file/qechrtvlze4obs0/CV_Tanjona_Dev_20260208_004627_0000.pdf/file" target="_blank" class="btn">Télécharger CV</a>
                 <div class="sci">
                     <a href="https://github.com/Tannrbt" target="_blank"><i class='bx bxl-github'></i></a>
                     <a href="https://www.linkedin.com/in/tanjona-nomenjanahary-rabe-razanamahery-73559123a/?originalSubdomain=mg" target="_blank"><i class='bx bxl-linkedin'></i></a>
-                    <a href="https://www.instagram.com/tan_rza/" target="_blank"><i class='bx bxl-instagram'></i></a>
-                    <a href="https://web.facebook.com/tanjona.razanamahery" target="_blank"><i class='bx bxl-facebook'></i></a>
+                    <a href="https://www.instagram.com/tanjona.dev?igsh=aW94cnh6Y2Y0Z2hl" target="_blank"><i class='bx bxl-instagram'></i></a>
+                    <a href="https://www.facebook.com/tanjona.razanamahery" target="_blank"><i class='bx bxl-facebook'></i></a>
                 </div>
             </div>
         </div>
