--- a/index.html
+++ b/index.html
@@ -344,14 +344,14 @@
                     <i class='bx bxs-envelope'></i>
                     <div class="detail">
                         <p>Email</p>
-                        <p>tannrbt@gmail.com</p>
+                        <p>tanjona.dev.web@gmail.com</p>
                     </div>
                 </div>
                 <div class="contact_detail">
                     <i class='bx bxs-map'></i>
                     <div class="detail">
                         <p>Adresse</p>
-                        <p>Lot II V 79 Ampandrana Ouest</p>
+                        <p>Lot II G 25 Ampandrana</p>
                     </div>
                 </div>
             </div>
